--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack project!</title>
+  <title>Vue3 Movie app</title>
+  
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Vue3 Movie App" />
+  <meta property="og:title" content="Vue3 Movie App" />
+  <meta property="og:description" content="The OMDb API is a RESTful web service to obtain movie information, all content and images on the site are contributed and maintained by our users." />
+  <meta property="og:image" content="https://images.theconversation.com/files/81618/original/image-20150514-28626-5j5514.JPG?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" />
+  <meta property="og:url" content="https://admiring-payne-890f49.netlify.app" />
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
